# pluggable-cli-example

./: .gitignore  README.rst  pyproject.toml
pluggable-cli/: pyproject.toml  tasks.py  tox.ini
pluggable-cli-plugin/: .gitignore  pyproject.toml  tasks.py
pluggable-cli-plugin/docs/: conf.py
pluggable-cli-plugin/pcli_plugin/: __init__.py  cli.py
pluggable-cli-plugin/tests/: test_pcli_plugin.py
pluggable-cli/docs/: index.rst
pluggable-cli/pcli/: __meta__.py  cli.py
pluggable-cli/pcli/plugin/: __init__.py  hookspec.py
pluggable-cli/tests/: test_pcli.py
