[tool.poetry]
name = "pluggable-cli-example"
version = "1.0.0"
description = "Pluggable CLI example program"
authors = ["Lorenzo Delgado <lorenzo.delgado@lnsd.es>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
pcli = { path = "./pluggable-cli/" }
pcli-plugin = { path = "./pluggable-cli-plugin/" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
