[tool.poetry]
name = "pcli"
version = "1.0.0"
description = ""
authors = ["Lorenzo Delgado <lorenzo.delgado@lnsd.es>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
click = "^7.0"
pluggy = "^0.13.1"
six = "^1.13.0"
pathlib2 = {version = "^2.2", python = "~2.7"}

[tool.poetry.dev-dependencies]
pytest = [
    {version = "^5.3.2", python = ">=3.5"},
    {version = "<=4.6.8", python = "~2.7"}
]
pytest-cov = "^2.8.1"
tox = "^3.14.2"
invoke = "^1.3.0"
pydocstyle = [
    {version = "^5.0.1", python = ">=3.4"},
    {version = "<=3.0.0", python = "~2.7"}
]
mypy = {version = "^0.761", python = ">=3.5"}
sphinx = [
    {version = "^2.3.1", python = ">=3.5"},
    {version = "<=1.8.5", python = "~2.7"}
]
flake8 = "^3.7.9"

[tool.poetry.scripts]
pcli = 'pcli.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
